[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Rooms/Menu Room.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/Themes/Base UI.tres" type="Theme" id=3]
[ext_resource path="res://resources/Themes/Title Text.tres" type="Theme" id=4]
[ext_resource path="res://resources/04B_30__.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0.694118 )
color = Color( 0.372549, 0.372549, 0.372549, 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="CanvasLayer/ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Menu Room" parent="CanvasLayer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="UI"]
margin_left = 113.0
margin_top = 287.0
margin_right = 781.0
margin_bottom = 492.0
theme = ExtResource( 4 )
text = "Slimey
Dungeons"

[node name="Menus" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1123.0
margin_top = -361.0
margin_right = -206.0
margin_bottom = 298.0
__meta__ = {
"_edit_group_": true
}

[node name="Main Menu" type="VBoxContainer" parent="UI/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Menus/Main Menu"]
margin_top = 199.0
margin_right = 917.0
margin_bottom = 249.0
alignment = 1

[node name="Level Select" type="Button" parent="UI/Menus/Main Menu/HBoxContainer"]
margin_left = 258.0
margin_right = 658.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
text = "Level Select"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Menus/Main Menu"]
margin_top = 269.0
margin_right = 917.0
margin_bottom = 319.0
alignment = 1

[node name="Settings" type="Button" parent="UI/Menus/Main Menu/HBoxContainer2"]
margin_left = 258.0
margin_right = 658.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
text = "Settings"

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/Menus/Main Menu"]
margin_top = 339.0
margin_right = 917.0
margin_bottom = 389.0
alignment = 1

[node name="Credits" type="Button" parent="UI/Menus/Main Menu/HBoxContainer4"]
margin_left = 258.0
margin_right = 658.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
text = "Credits"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Menus/Main Menu"]
margin_top = 409.0
margin_right = 917.0
margin_bottom = 459.0
alignment = 1

[node name="Quit to Desktop" type="Button" parent="UI/Menus/Main Menu/HBoxContainer3"]
margin_left = 258.0
margin_right = 658.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
text = "Quit to Desktop"

[node name="Level Select Menu" type="Control" parent="UI/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1254.0
margin_right = 1254.0

[node name="Buttons Grid" type="GridContainer" parent="UI/Menus/Level Select Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -170.0
margin_right = 290.0
margin_bottom = 170.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Level 1" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "1"

[node name="Level 2" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "2"

[node name="Level 3" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "3"

[node name="Level 4" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 360.0
margin_right = 460.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "4"

[node name="Level 5" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 480.0
margin_right = 580.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "5"

[node name="Level 6" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_top = 120.0
margin_right = 100.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
text = "6"

[node name="Level 7" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 120.0
margin_top = 120.0
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
text = "7"

[node name="Level 8" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 240.0
margin_top = 120.0
margin_right = 340.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
text = "8"

[node name="Level 9" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 360.0
margin_top = 120.0
margin_right = 460.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
text = "9"

[node name="Level 10" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 480.0
margin_top = 120.0
margin_right = 580.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
text = "10"

[node name="Level 11" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_top = 240.0
margin_right = 100.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
text = "11"

[node name="Level 12" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 120.0
margin_top = 240.0
margin_right = 220.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
text = "12"

[node name="Level 13" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 240.0
margin_top = 240.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
text = "13"

[node name="Level 14" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 360.0
margin_top = 240.0
margin_right = 460.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
text = "14"

[node name="Level 15" type="Button" parent="UI/Menus/Level Select Menu/Buttons Grid"]
margin_left = 480.0
margin_top = 240.0
margin_right = 580.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 100 )
text = "15"

[node name="Back to Main Menu" type="Button" parent="UI/Menus/Level Select Menu"]
margin_right = 117.0
margin_bottom = 47.0
text = "Back"

[node name="Settings Menu" type="Control" parent="UI/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1254.0
margin_right = 1254.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/Settings Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Control4" type="Control" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_right = 917.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Show Hints" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 170.0
margin_right = 917.0
margin_bottom = 198.0
alignment = 1

[node name="Show Hints Label" type="Label" parent="UI/Menus/Settings Menu/VBoxContainer/Show Hints"]
margin_left = 290.0
margin_right = 590.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 0 )
text = "Show Hints"
align = 2

[node name="Show Hints Checkbox" type="CheckBox" parent="UI/Menus/Settings Menu/VBoxContainer/Show Hints"]
margin_left = 610.0
margin_right = 626.0
margin_bottom = 28.0
pressed = true

[node name="Performance Mode" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 218.0
margin_right = 917.0
margin_bottom = 246.0
alignment = 1

[node name="Performance Mode Label" type="Label" parent="UI/Menus/Settings Menu/VBoxContainer/Performance Mode"]
margin_left = 259.0
margin_right = 621.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 0 )
text = "Performance Mode"
align = 2

[node name="Performance Mode Checkbox" type="CheckBox" parent="UI/Menus/Settings Menu/VBoxContainer/Performance Mode"]
margin_left = 641.0
margin_right = 657.0
margin_bottom = 28.0
pressed = true

[node name="Master Volume" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 266.0
margin_right = 917.0
margin_bottom = 316.0
alignment = 1

[node name="Master Volume Label" type="Label" parent="UI/Menus/Settings Menu/VBoxContainer/Master Volume"]
margin_left = 48.0
margin_top = 11.0
margin_right = 348.0
margin_bottom = 39.0
rect_min_size = Vector2( 300, 0 )
text = "Master Volume"
align = 2

[node name="Master Volume Slider" type="HSlider" parent="UI/Menus/Settings Menu/VBoxContainer/Master Volume"]
margin_left = 368.0
margin_right = 868.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
max_value = 1.0
step = 0.01
tick_count = 10
ticks_on_borders = true

[node name="Music Volume" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 336.0
margin_right = 917.0
margin_bottom = 386.0
alignment = 1

[node name="Music Volume Label" type="Label" parent="UI/Menus/Settings Menu/VBoxContainer/Music Volume"]
margin_left = 48.0
margin_top = 11.0
margin_right = 348.0
margin_bottom = 39.0
rect_min_size = Vector2( 300, 0 )
text = "Music Volume"
align = 2

[node name="Music Volume Slider" type="HSlider" parent="UI/Menus/Settings Menu/VBoxContainer/Music Volume"]
margin_left = 368.0
margin_right = 868.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
max_value = 1.0
step = 0.01
tick_count = 10
ticks_on_borders = true

[node name="Sounds Volume" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 406.0
margin_right = 917.0
margin_bottom = 456.0
alignment = 1

[node name="Sounds Volume Label" type="Label" parent="UI/Menus/Settings Menu/VBoxContainer/Sounds Volume"]
margin_left = 48.0
margin_top = 11.0
margin_right = 348.0
margin_bottom = 39.0
rect_min_size = Vector2( 300, 0 )
text = "Sounds Volume"
align = 2

[node name="Sounds Volume Slider" type="HSlider" parent="UI/Menus/Settings Menu/VBoxContainer/Sounds Volume"]
margin_left = 368.0
margin_right = 868.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
max_value = 1.0
step = 0.01
tick_count = 10
ticks_on_borders = true

[node name="Control" type="Control" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 476.0
margin_right = 917.0
margin_bottom = 626.0
rect_min_size = Vector2( 0, 150 )

[node name="Save" type="HBoxContainer" parent="UI/Menus/Settings Menu/VBoxContainer"]
margin_top = 646.0
margin_right = 917.0
margin_bottom = 711.0
alignment = 1

[node name="Save Button" type="Button" parent="UI/Menus/Settings Menu/VBoxContainer/Save"]
margin_left = 283.0
margin_right = 633.0
margin_bottom = 65.0
rect_min_size = Vector2( 350, 65 )
text = "Save Settings"

[node name="Back to Main Menu" type="Button" parent="UI/Menus/Settings Menu"]
margin_right = 117.0
margin_bottom = 47.0
text = "Back"

[node name="Credits" type="Control" parent="UI/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1254.0
margin_right = 1254.0

[node name="Credits Label" type="RichTextLabel" parent="UI/Menus/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "


[center]
[b]Art[/b]

Low Poly Dungeon Assets - u/Quaternius
Font - Yuji Oshimoto

[b]Sounds[/b]

Music - 3xBlast
Slime Sounds - https://www.zapsplat.com
Pressure Plate and Door - Kenney
Key - Sonniss
[/center]"
text = "



Art

Low Poly Dungeon Assets - u/Quaternius
Font - Yuji Oshimoto

Sounds

Music - 3xBlast
Slime Sounds - https://www.zapsplat.com
Pressure Plate and Door - Kenney
Key - Sonniss
"
scroll_active = false

[node name="Back to Main Menu" type="Button" parent="UI/Menus/Credits"]
margin_right = 117.0
margin_bottom = 47.0
text = "Back"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="UI/Menus/Main Menu/HBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="UI/Menus/Main Menu/HBoxContainer2/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="UI/Menus/Main Menu/HBoxContainer4/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="UI/Menus/Main Menu/HBoxContainer3/Quit to Desktop" to="." method="_on_Quit_to_Desktop_pressed"]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 1" to="." method="play_level" binds= [ "1" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 2" to="." method="play_level" binds= [ "2" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 3" to="." method="play_level" binds= [ "3" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 4" to="." method="play_level" binds= [ "4" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 5" to="." method="play_level" binds= [ "5" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 6" to="." method="play_level" binds= [ "6" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 7" to="." method="play_level" binds= [ "7" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 8" to="." method="play_level" binds= [ "8" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 9" to="." method="play_level" binds= [ "9" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 10" to="." method="play_level" binds= [ "10" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 11" to="." method="play_level" binds= [ "11" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 12" to="." method="play_level" binds= [ "12" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 13" to="." method="play_level" binds= [ "13" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 14" to="." method="play_level" binds= [ "14" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Buttons Grid/Level 15" to="." method="play_level" binds= [ "15" ]]
[connection signal="pressed" from="UI/Menus/Level Select Menu/Back to Main Menu" to="." method="_on_Back_to_Main_Menu_pressed"]
[connection signal="pressed" from="UI/Menus/Settings Menu/VBoxContainer/Show Hints/Show Hints Checkbox" to="." method="_on_Show_Hints_Checkbox_pressed"]
[connection signal="pressed" from="UI/Menus/Settings Menu/VBoxContainer/Performance Mode/Performance Mode Checkbox" to="." method="_on_Performance_Mode_Checkbox_pressed"]
[connection signal="value_changed" from="UI/Menus/Settings Menu/VBoxContainer/Master Volume/Master Volume Slider" to="." method="_on_Master_Volume_Slider_value_changed"]
[connection signal="value_changed" from="UI/Menus/Settings Menu/VBoxContainer/Music Volume/Music Volume Slider" to="." method="_on_Music_Volume_Slider_value_changed"]
[connection signal="value_changed" from="UI/Menus/Settings Menu/VBoxContainer/Sounds Volume/Sounds Volume Slider" to="." method="_on_Sounds_Volume_Slider_value_changed"]
[connection signal="pressed" from="UI/Menus/Settings Menu/VBoxContainer/Save/Save Button" to="." method="save_settings"]
[connection signal="pressed" from="UI/Menus/Settings Menu/Back to Main Menu" to="." method="_on_Back_to_Main_Menu_pressed"]
[connection signal="pressed" from="UI/Menus/Credits/Back to Main Menu" to="." method="_on_Back_to_Main_Menu_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
